first commit from colab

--- a/homework/hw01/hw1_ridge.ipynb
+++ b/homework/hw01/hw1_ridge.ipynb
@@ -3,8 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
-      "provenance": []
+      "name": "hw1_ridge.ipynb",
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,35 +17,41 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/chuuuuu/machine_learning_2021/blob/main/homework/hw01/hw1_ridge.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SqRw2hQZ_MG7",
-        "outputId": "5d564535-5d24-4cc1-8cdc-360ef890409f"
+        "outputId": "0a5c6fbf-686a-424d-e538-7dd0e2af4f0a"
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
         "!gdown --id '19CCyCgJrUxtvgZF53vnctJiOJ23T5mqF' --output covid.train.csv\n",
         "!gdown --id '1CE240jLm2npU-tdz81-oVKEF3T2yfT1O' --output covid.test.csv"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=19CCyCgJrUxtvgZF53vnctJiOJ23T5mqF\n",
             "To: /content/covid.train.csv\n",
-            "100% 2.00M/2.00M [00:00<00:00, 31.1MB/s]\n",
+            "100% 2.00M/2.00M [00:00<00:00, 63.6MB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1CE240jLm2npU-tdz81-oVKEF3T2yfT1O\n",
             "To: /content/covid.test.csv\n",
-            "100% 651k/651k [00:00<00:00, 10.2MB/s]\n"
+            "100% 651k/651k [00:00<00:00, 40.3MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -75,7 +82,7 @@
         "\n",
         "test_X = test_data"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -85,7 +92,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ze7H0ca-_66O",
-        "outputId": "1050ed8c-34d3-4ef7-ad3d-ef5896888811"
+        "outputId": "60fb9a9e-1db8-4653-81f3-b9f4408859c0"
       },
       "source": [
         "from sklearn.feature_selection import f_regression, SelectKBest, mutual_info_regression\n",
@@ -100,7 +107,7 @@
         "train_X = train_X[:, cols]\n",
         "test_X = test_X[:, cols]"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +125,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b67f514b-b3af-4bae-aba7-fc055337030e"
+        "outputId": "0e00a897-fd86-470b-b12b-ce760ca6b1e1"
       },
       "source": [
         "# from sklearn.linear_model import LinearRegression\n",
@@ -137,7 +144,7 @@
         "# test_y = clf.predict(test_X)\n",
         "# print(f'clf.alpha_: {clf.alpha_}')"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +171,7 @@
         "    for i, p in enumerate(test_y):\n",
         "        writer.writerow([i, p])\n"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -174,12 +181,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52da2930-d39e-4ebd-9f21-b851d8170b52"
+        "outputId": "affdc72d-eeed-4ece-bec3-15b8a53a2670"
       },
       "source": [
         "print(test_y)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
