fix: download raw data into drive

--- a/homework/hw01/hw1_ridge.ipynb
+++ b/homework/hw01/hw1_ridge.ipynb
@@ -33,25 +33,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SqRw2hQZ_MG7",
-        "outputId": "0a5c6fbf-686a-424d-e538-7dd0e2af4f0a"
+        "outputId": "ccd0ff15-d4cd-4055-c238-5fca606abcf2"
       },
       "source": [
-        "!gdown --id '19CCyCgJrUxtvgZF53vnctJiOJ23T5mqF' --output covid.train.csv\n",
-        "!gdown --id '1CE240jLm2npU-tdz81-oVKEF3T2yfT1O' --output covid.test.csv"
+        "from os import path, makedirs\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "WORKSPACE = 'gdrive/MyDrive/ColabNotebooks/HW1'\n",
+        "\n",
+        "if not path.exists(f'{WORKSPACE}/dataset'):\n",
+        "  makedirs(f'{WORKSPACE}/dataset')\n",
+        "  !gdown --id '19CCyCgJrUxtvgZF53vnctJiOJ23T5mqF' --output '{WORKSPACE}/dataset/covid.train.csv'\n",
+        "  !gdown --id '1CE240jLm2npU-tdz81-oVKEF3T2yfT1O' --output '{WORKSPACE}/dataset/covid.test.csv'\n",
+        "\n",
+        "DATA_PATH = f'{WORKSPACE}/dataset'"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=19CCyCgJrUxtvgZF53vnctJiOJ23T5mqF\n",
-            "To: /content/covid.train.csv\n",
-            "100% 2.00M/2.00M [00:00<00:00, 63.6MB/s]\n",
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=1CE240jLm2npU-tdz81-oVKEF3T2yfT1O\n",
-            "To: /content/covid.test.csv\n",
-            "100% 651k/651k [00:00<00:00, 40.3MB/s]\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -66,8 +68,8 @@
         "import csv\n",
         "import numpy as np\n",
         "\n",
-        "TRAIN_PATH = 'covid.train.csv'\n",
-        "TEST_PATH = 'covid.test.csv'\n",
+        "TRAIN_PATH: f'{DATA_PATH}/covid.train.csv'\n",
+        "TEST_PATH: f'{DATA_PATH}/covid.test.csv'\n",
         "\n",
         "with open(TRAIN_PATH, 'r') as f:\n",
         "    train_data = list(csv.reader(f))\n",
@@ -82,7 +84,7 @@
         "\n",
         "test_X = test_data"
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -92,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ze7H0ca-_66O",
-        "outputId": "60fb9a9e-1db8-4653-81f3-b9f4408859c0"
+        "outputId": "e22ed925-3579-4401-fed2-92a73af1be53"
       },
       "source": [
         "from sklearn.feature_selection import f_regression, SelectKBest, mutual_info_regression\n",
@@ -107,7 +109,7 @@
         "train_X = train_X[:, cols]\n",
         "test_X = test_X[:, cols]"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +127,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0e00a897-fd86-470b-b12b-ce760ca6b1e1"
+        "outputId": "4f11a198-0bc4-4cd9-ae4f-b3451b7397cd"
       },
       "source": [
         "# from sklearn.linear_model import LinearRegression\n",
@@ -144,7 +146,7 @@
         "# test_y = clf.predict(test_X)\n",
         "# print(f'clf.alpha_: {clf.alpha_}')"
       ],
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +173,7 @@
         "    for i, p in enumerate(test_y):\n",
         "        writer.writerow([i, p])\n"
       ],
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -181,12 +183,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "affdc72d-eeed-4ece-bec3-15b8a53a2670"
+        "outputId": "7985e8b7-1c60-4667-ac56-2c1da1bbcd25"
       },
       "source": [
         "print(test_y)"
       ],
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
