fix: download raw data into drive

--- a/homework/hw02/hw2_1_dnn.ipynb
+++ b/homework/hw02/hw2_1_dnn.ipynb
@@ -67,7 +67,7 @@
       "source": [
         "%reset -f"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,28 +97,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OzkiMEcC3Foq",
-        "outputId": "984d5932-c5a5-43e1-e1e0-94cb6c77359b"
+        "outputId": "1bff8b1e-3370-4dfb-cf3f-f3711e40aa68"
       },
       "source": [
-        "from os import path\n",
+        "from os import path, makedirs\n",
         "from google.colab import drive\n",
         "\n",
         "drive.mount('/content/gdrive')\n",
         "WORKSPACE = 'gdrive/MyDrive/ColabNotebooks/HW2/HW2_1'\n",
         "\n",
         "if not path.exists(f'{WORKSPACE}/dataset'):\n",
+        "  makedirs(f'{WORKSPACE}/dataset')\n",
         "  !gdown --id '1HPkcmQmFGu-3OknddKIa5dNDsR05lIQR' --output '{WORKSPACE}/data.zip'\n",
         "  !unzip '{WORKSPACE}/data.zip' -d '{WORKSPACE}/dataset'\n",
-        "  !ls\n",
         "\n",
         "DATA_PATH = f'{WORKSPACE}/dataset/timit_11'"
       ],
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
         }
@@ -192,7 +192,7 @@
         "\n",
         "dataManager = DataManager()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
         "    'NEGATIVE_SLOPE': 0.05\n",
         "}"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
         "    def __len__(self):\n",
         "        return len(self.data)\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
         "\n",
         "    return train_set, val_set, train_loader, val_loader, loss_weights"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -419,7 +419,7 @@
         "        INPUT_DIM = config['INPUT_DIM']\n",
         "        summary(self, (INPUT_DIM, ))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,7 +441,7 @@
         "def get_device():\n",
         "  return 'cuda' if torch.cuda.is_available() else 'cpu'"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +469,7 @@
         "    torch.backends.cudnn.benchmark = False\n",
         "    torch.backends.cudnn.deterministic = True"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,7 +605,7 @@
         "\n",
         "trainer = Trainer()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -633,7 +633,7 @@
         "for i in range(len(cf_matrix)):\n",
         "    print(f'class {i} acc: {cf_matrix[i][i] / cf_matrix[i].sum()}')"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
