fix: fix the path problem

--- a/homework/hw01/hw1_ridge.ipynb
+++ b/homework/hw01/hw1_ridge.ipynb
@@ -33,13 +33,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SqRw2hQZ_MG7",
-        "outputId": "ccd0ff15-d4cd-4055-c238-5fca606abcf2"
+        "outputId": "acc20b6c-e3c0-4621-ccd6-cb2ba725f76e"
       },
       "source": [
         "from os import path, makedirs\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "WORKSPACE = 'gdrive/MyDrive/ColabNotebooks/HW1'\n",
+        "WORKSPACE = 'drive/MyDrive/ColabNotebooks/HW1'\n",
         "\n",
         "if not path.exists(f'{WORKSPACE}/dataset'):\n",
         "  makedirs(f'{WORKSPACE}/dataset')\n",
@@ -48,12 +48,20 @@
         "\n",
         "DATA_PATH = f'{WORKSPACE}/dataset'"
       ],
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=19CCyCgJrUxtvgZF53vnctJiOJ23T5mqF\n",
+            "To: /content/drive/MyDrive/ColabNotebooks/HW1/dataset/covid.train.csv\n",
+            "100% 2.00M/2.00M [00:00<00:00, 63.9MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1CE240jLm2npU-tdz81-oVKEF3T2yfT1O\n",
+            "To: /content/drive/MyDrive/ColabNotebooks/HW1/dataset/covid.test.csv\n",
+            "100% 651k/651k [00:00<00:00, 36.9MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -84,7 +92,7 @@
         "\n",
         "test_X = test_data"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +117,7 @@
         "train_X = train_X[:, cols]\n",
         "test_X = test_X[:, cols]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +154,7 @@
         "# test_y = clf.predict(test_X)\n",
         "# print(f'clf.alpha_: {clf.alpha_}')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +181,7 @@
         "    for i, p in enumerate(test_y):\n",
         "        writer.writerow([i, p])\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +196,7 @@
       "source": [
         "print(test_y)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
